# WhitzardGen

./: .gitignore  AGENT.md  README.md  README.zh-CN.md  START_HERE.md  aigc  next_todo.md  progress.md  pyproject.toml  requirements.txt  setup.py  task_p1.md  whitzard
configs/: local_envs.yaml  local_models.yaml  local_runtime.yaml  model_benchmarks.yaml  models.yaml
docs/: benchmark_case_schema.md  benchmark_framework_spec.md  cli_spec.md  codex_tasks.md  dataset_schema.md  env_manager_spec.md  ethics_benchmark_spec.md  ethics_conflict_eval_runbook.zh-CN.md  evaluator_spec.md  experiment_spec.md  model_adapter.md  model_benchmarks.md  model_capability_matrix.json  model_capability_matrix.md  model_integration_checklist.md  model_registry_spec.md  pipeline_dag_spec.md  prompt_spec.md  refactor_plan.md  runtime_spec.md  scheduler_spec.md  spec.md
examples/: __init__.py
prompts/: canary_image.csv  canary_image.jsonl  canary_image.txt  canary_text.jsonl  canary_video.csv  canary_video.jsonl  canary_video.txt  example.txt  example_image_rich.jsonl  example_video_rich.jsonl  test_image_100.txt  test_video_100.txt  theme_tree_example.counts.yaml  theme_tree_example.yaml  video_example.txt
scripts/: mova_service.sh
tests/: test_annotation.py  test_benchmarking.py  test_cli_benchmark.py  test_cli_runs.py  test_dataset_export.py  test_env_manager.py  test_persistent_worker.py  test_progress.py  test_prompt_generation.py  test_prompt_import.py  test_prompts.py  test_recovery.py  test_registry.py  test_run_flow.py  test_run_ledger.py  test_run_profiles.py  test_settings.py  (+7 more)
(+446 files in other folders)
